# Agent-Template

./: README.md  main.py  pyproject.toml  tools.py
sandbox/: job_list.md  job_sites.md
src/: sidekick.py
src/sandbox/: job_openings_backend_fullstack.md  job_openings_cloud_devops.md  job_openings_cyber_security.md
