[project]
name = "sidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-search-results>=2.4.2",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.2.2",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "wikipedia>=1.4.0",
]
